Assume host Ollama and Open WebUI

--- a/index.html
+++ b/index.html
@@ -420,6 +420,9 @@
         <footer>
             <p>Brain AI v2.0 | Local-first AI Infrastructure</p>
             <p style="margin-top: 5px;">vLLM • Ollama • Open WebUI • Wyoming • Home Assistant</p>
+            <p style="margin-top: 5px; font-size: 0.85em; color: var(--text-dim);">
+                Ollama (11434) and Open WebUI (3000) run on the host with default ports.
+            </p>
         </footer>
     </div>
     
